--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "i18n": "^0.13.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.21.0",
     "vue-router": "^3.2.0",
